--- a/src/app/components/application/application.html
+++ b/src/app/components/application/application.html
@@ -2,8 +2,9 @@
     <h1>这是一个Angular轻量级框架 +  Bootstrap 开发出来的页面</h1>
     <p>通过定义组件@Component、模块@NgModule和指令@Directive，构建在线拍卖应用程序。</p>
  </div>
+ 
 <!-- 导航区域 -->
-<p>auction-navbar</p>
+<auction-navbar></auction-navbar>
 
 <div class="container">
     <div class="row">
