bootstrap图标 + Nav导航组件修正

--- a/src/app/components/application/application.html
+++ b/src/app/components/application/application.html
@@ -1,5 +1,5 @@
 <div class="container p-5 my-5 bg-primary text-white">
-    <h1>这是一个Angular轻量级框架 +  Bootstrap 开发出来的页面</h1>
+    <h1>这是一个Angular(Ver 14.1.0) +  Bootstrap(Ver 5.2.0) 开发出来的页面</h1>
     <p>通过定义组件@Component、模块@NgModule和指令@Directive，构建在线拍卖应用程序。</p>
  </div>
  
