检索组件，轮播组件，页脚组件新规追加

--- a/src/app/components/application/application.html
+++ b/src/app/components/application/application.html
@@ -13,7 +13,7 @@
         -->
         <div class="col-md-3">
             <!-- 左边查询区域 -->
-            <p>auction-search</p>
+            <auction-search></auction-search>
         </div>
 
         <!--
@@ -25,7 +25,7 @@
             <!-- 右边轮播和图片显示区域 -->
             <div class="row carousel-holder">
                 <div class="col-md-12">
-                    <p>auction-carousel</p>
+                    <auction-carousel></auction-carousel>
                 </div>
             </div>
             <!-- 产品grid表示区，使用 -->
@@ -38,5 +38,5 @@
     </div>
 </div>
 
-<p>auction-footer</p>
+<auction-footer></auction-footer>
 
