--- a/src/app/components/application/application.html
+++ b/src/app/components/application/application.html
@@ -1,5 +1,5 @@
-<div class="container p-5 my-5 bg-primary text-white">
-    <h1>这是一个Angular(Ver 14.1.0) +  Bootstrap(Ver 5.2.0) 开发出来的页面</h1>
+<div class="row p-5 bg-primary text-white">
+    <h1>这是一个Angular(Ver 14.1.0) +  Bootstrap(Ver 5.2.0) 开发出来的Web页面</h1>
     <p>通过定义组件@Component、模块@NgModule和指令@Directive，构建在线拍卖应用程序。</p>
  </div>
  
@@ -22,6 +22,7 @@
             2. Second one has a flexible grid with products.
         -->
         <div class="col-md-9">
+            <br/>
             <!-- 右边轮播和图片显示区域 -->
             <div class="row carousel-holder">
                 <div class="col-md-12">
