--- a/src/app/components/carousel/carousel.html
+++ b/src/app/components/carousel/carousel.html
@@ -1,29 +1,28 @@
-<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+<div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="assets/img/800x300.png" class="d-block w-100" alt="...">
+      <div class="carousel-item">
+        <img src="assets/img/CAR5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="assets/img/800x300.png" class="d-block w-100" alt="...">
+        <img src="assets/img/CAR2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5 class="text-white">THE 2</h5>
+          <p class="text-white">BMW2シリーズアクティブツアラー</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="assets/img/800x300.png" class="d-block w-100" alt="...">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="assets/img/CAR1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5 class="text-white">THE i4</h5>
+          <p class="text-white">BMW i4: BMW初の完全電動グランクーペ</p>
         </div>
       </div>
     </div>
