商品リストと星コンポーネントを新規作成。glyphiconsアイコン表示されない障害を対応する

--- a/src/app/components/product-item/product-item.html
+++ b/src/app/components/product-item/product-item.html
@@ -8,5 +8,5 @@
         <h4 *ngIf="product"><a>{{product.title}}</a></h4>
         <p *ngIf="product">{{product.description}}</p>
     </div>
-    <div>auction-stars</div>
+    <auction-stars [rating]="rating"></auction-stars>
 </div>
