ボタンの幅さの障害を対応する

--- a/src/app/components/search/search.html
+++ b/src/app/components/search/search.html
@@ -16,6 +16,7 @@
   </div>
   <br/>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary btn-block">检索</button>
+    <!-- 按钮长度最宽设定 col-12 mx-auto -->
+    <button type="submit" class="btn btn-primary btn-block col-12 mx-auto">检索</button>
   </div>
 </form>
