--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">导航</a>
+    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">主页</a>
+          <a class="nav-link active" aria-current="page" href="#">ホーム</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">关于</a>
+          <a class="nav-link" href="#">ニュース</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">服务</a>
+          <a class="nav-link" href="#">サービス</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">联系</a>
+          <a class="nav-link">企業情報</a>
         </li>
       </ul>
     </div>
