--- a/src/app/components/search/search.html
+++ b/src/app/components/search/search.html
@@ -1,17 +1,17 @@
 <form name="searchForm" role="form">
   <br/>
   <div class="form-group">
-    <label for="productTitle">商品名称:</label>
-    <input type="text" id="productTitle" placeholder="名称" class="form-control">
+    <label for="productTitle">名称:</label>
+    <input type="text" id="productTitle" placeholder="" class="form-control">
   </div>
   <br/>
   <div class="form-group">
-    <label for="productPrice">商品价格:</label>
-    <input type="number" id="productPrice" min="0" step="any" placeholder="价格" class="form-control">
+    <label for="productPrice">価格:</label>
+    <input type="number" id="productPrice" min="0" step="any" placeholder="" class="form-control">
   </div>
   <br/>
   <div class="form-group">
-    <label for="productCategory">商品种类:</label>
+    <label for="productCategory">種類:</label>
     <input id="productCategory" class="form-control">
   </div>
   <br/>
