--- a/src/app/components/search/search.html
+++ b/src/app/components/search/search.html
@@ -1,3 +1,10 @@
+<style>
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+  }
+</style>
+
 <form name="searchForm" role="form">
   <br/>
   <div class="form-group">
@@ -20,3 +27,4 @@
     <button type="submit" class="btn btn-primary btn-block col-12 mx-auto">检索</button>
   </div>
 </form>
+
