--- a/src/app/components/application/application.html
+++ b/src/app/components/application/application.html
@@ -23,20 +23,7 @@
         -->
         <div class="col-md-9">
             <br/>
-            <!-- 右边轮播和图片显示区域 -->
-            <div class="row carousel-holder">
-                <div class="col-md-12">
-                    <auction-carousel></auction-carousel>
-                </div>
-            </div>
-            <!-- 产品grid表示区，使用 -->
-            <div class="row">
-                <div *ngFor = "let prod of products" class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="auction-product-item">
-                        <auction-product-item [product]="prod" [img]="prod.img" [rating]="prod.rating"></auction-product-item>
-                    </div>
-                </div>
-            </div>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
