添加评分功能
1 修改星组件，可以根据star只读与否，来变更star的颜色
2 在产品明细组件中，追加评分功能
3 textarea自适应宽度css追加
4 追加[(ngModel)} ，实现评论内容与newComment变量，双向绑定
5 在app.module.ts中，引入 FormModule模块，不然[(ngModel)} 会报错

--- a/src/app/components/product-detail/product-detail.css
+++ b/src/app/components/product-detail/product-detail.css
@@ -6,3 +6,10 @@
 .pull-right {
     float: right;
 }
+
+/* 解决textarea宽度自动调节的问题 */
+.textarea-inherit {
+    width: 100%;
+    overflow: auto;
+    word-break: break-all; /* 解决兼容性问题 */
+}
