--- a/src/app/components/product-detail/product-detail.html
+++ b/src/app/components/product-detail/product-detail.html
@@ -21,6 +21,19 @@
   <div class="row">
     <div class="col-md-12"></div>
   </div>
+  <div class="text-right">
+    <button (click)="isReviewHidden=!isReviewHidden" class="btn btn-success btn-green">編集</button>
+  </div>
+  <div [hidden]="isReviewHidden">
+    <br/>
+    <div>
+      <auction-stars [(rating)]="newRating" [readonly]="false" class="large"></auction-stars>
+    </div>
+    <div><textarea [(ngModel)]="newComment" class="textarea-inherit" rows="5"></textarea></div>
+    <br/>
+    <div><button (click)="addReview()" class="btn btn-primary">コメントを追加する</button></div>
+  </div>
+  <br/>
   <div class="row" *ngFor="let review of reviews">
     <hr/>
     <div class="col-md-12">
