--- a/src/app/components/product-detail/product-detail.html
+++ b/src/app/components/product-detail/product-detail.html
@@ -21,8 +21,8 @@
   <div class="row">
     <div class="col-md-12"></div>
   </div>
-  <div class="text-right">
-    <button (click)="isReviewHidden=!isReviewHidden" class="btn btn-success btn-green">編集</button>
+  <div class="row">
+    <div class="col-md-12"><button (click)="isReviewHidden=!isReviewHidden" class="btn btn-success btn-green">編集</button></div>
   </div>
   <div [hidden]="isReviewHidden">
     <br/>
@@ -31,7 +31,7 @@
     </div>
     <div><textarea [(ngModel)]="newComment" class="textarea-inherit" rows="5"></textarea></div>
     <br/>
-    <div><button (click)="addReview()" class="btn btn-primary">コメントを追加する</button></div>
+    <div><button (click)="addReview()" class="btn btn-primary">新規追加</button></div>
   </div>
   <br/>
   <div class="row" *ngFor="let review of reviews">
