--- a/src/app/components/search/search.css
+++ b/src/app/components/search/search.css
@@ -1,5 +1,6 @@
 span.help-block {
-    font-size: 12px;
+    display: block; 
+    margin-top: 5px; 
+    margin-bottom: 10px; 
     color: red;
-    background: none;
 }
