--- a/src/app/components/product-detail/product-detail.html
+++ b/src/app/components/product-detail/product-detail.html
@@ -7,6 +7,7 @@
           <p class="card-text" *ngIf="product">
             <span><auction-stars [rating]="product.rating"></auction-stars></span>
           </p>
+          <p><button class="btn btn-danger" (click)="toggletWatchProduct()">{{isWatching? 'Stop watch' : 'Watch'}}</button></p>
           <p class="card-text" *ngIf="reviews">
             Last Updated Date: {{reviews[reviews.length -1].timestamp | date: 'medium'}}
           </p>
