完成webSocket台前代码
1 修改了后台webscoket的障害：取不出价格bid
  Map<number, number> 改成 Map<string, number>就可以了
2 前台如果想要取得
  必须先JSON.parse()一下代码，将string转成JSON对象型

--- a/src/app/components/product-detail/product-detail.html
+++ b/src/app/components/product-detail/product-detail.html
@@ -7,7 +7,7 @@
           <p class="card-text" *ngIf="product">
             <span><auction-stars [rating]="product.rating"></auction-stars></span>
           </p>
-          <p><button class="btn btn-danger" (click)="toggletWatchProduct()">{{isWatching? 'Stop watch' : 'Watch'}}</button></p>
+          <p><button class="btn btn-danger" (click)="toggletWatchProduct()">{{isWatching? '取消' : '订阅'}}</button><label>&nbsp;&nbsp;当前最新出价： {{currentBid | currency}}</label></p>
           <p class="card-text" *ngIf="reviews">
             Last Updated Date: {{reviews[reviews.length -1].timestamp | date: 'medium'}}
           </p>
