--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -9,14 +9,14 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">ホーム</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">ニュース</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">サービス</a>
-        </li>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link">企業情報</a>
+          <a class="nav-link" [routerLink]="['/reference']">備考</a>
         </li>
       </ul>
     </div>
